[package]
name = "broom"
version = "0.1.0"
authors = ["Christian Ivicevic <mail@christian-ivicevic.com>"]
edition = "2021"

[dependencies]
moka = { version = "0.9", features = ["future"] }
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "utils", "cache"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
